--- a/client/index.html
+++ b/client/index.html
@@ -80,14 +80,12 @@
       <!-- injector:js -->
       <script src="app/auth/auth.controller.js"></script>
       <script src="app/auth/auth.js"></script>
-      <script src="app/game4/game4.controller.js"></script>
-      <script src="app/game4/game4.js"></script>
+      <script src="app/game/game.controller.js"></script>
+      <script src="app/game/game.js"></script>
       <script src="app/howto/howto.controller.js"></script>
       <script src="app/howto/howto.js"></script>
       <script src="app/leaderboard/leaderboard.controller.js"></script>
       <script src="app/leaderboard/leaderboard.js"></script>
-      <script src="app/level-one/level-one.controller.js"></script>
-      <script src="app/level-one/level-one.js"></script>
       <script src="app/levelcomplete/levelcomplete.controller.js"></script>
       <script src="app/levelcomplete/levelcomplete.js"></script>
       <script src="app/main/main.controller.js"></script>
