change data structure

--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -1,207 +1,14 @@
-<div id="overlay"></div>
-<div id="clear-overlay" ng-click="toggleIllegalAlert()"></div>
-<div id="clear-nobucket-alert-overlay" ng-click="toggleNoBucketAlert()"></div>
-
-<div id="popup3">
-  <div id='popup-content3'>
-    <button class="btn menu-button" ng-click="quit()">Yes</button>
-    <button class="btn menu-button" ng-click="endGame()">Cancel</button>
-    <br/>
-  </div>
-</div>
-
-<div id="player-selected-seed" class="text-center">
-  Are you sure you want to change your current match client?
-  <br>
-  <button class="btn menu-button" ng-click="playerSelectedFadeOut();getNextSeed(playerSelectedSeed)">Yes</button>
-  <button class="btn menu-button" ng-click="playerSelectedFadeOut()">Cancel</button>
-</div>
-
-
-
-<div id="replace-popup">
-  <div class="popup-title">This alien has an enemy.</div>
-  <div id='replace-popup-content'><br/>
-    <img ng-src="{{aliens.alienArray[aliens.newId].url}}"
-          style=""/>
-    <span class="glyphicon glyphicon-share-alt"></span>
-    <img ng-src="{{aliens.alienArray[aliens.oldId].url}}" class='replaced'
-          style=""/><br/>
-    <button class="btn menu-button" ng-click="selectIllegalAlien(true)">Replace</button>
-    <button class="btn menu-button" ng-click="selectIllegalAlien(false)">Cancel</button>
-  </div>
-</div>
-
-<div id="no-buck" class="no-bucket text-center">
-  Sorry, this action cannot be completed.<br>
-  You did not select a group.
-</div>
-
-
-
-<div id="ingame-leaderboard2" class="text-center">
-<div class="bg">
-<div class="col-xs-3"></div>
-<div class="col-xs-6">
-
-<div id="ingame-leaderboard-content2">
-<p class='blink' ng-show="!gotLeaderBoard">Please wait while we save your earnings. It may take a while.</p>
-<p ng-show="!submittedScore">(If nothing happens after a couple of minutes, please click <span ng-click="targetReachedGetNext()" style="pointer:cursor; color:rgb(102,167,227)">here</span>.)</p>
-
-
-<p ng-show="gotLeaderBoard">Your total earnings are now <span class="score">${{overallScore}}</span> and
-your rank is now <span class="score">{{overallScoreRank||unranked}}</span>.</p>
-<br/>
-<table class="table text-center" ng-show="gotLeaderBoard">
-<thead>
-<tr>
-<th class="text-center">Player</th>
-<th class="text-center">Earnings</th>
-</tr>
-</thead>
-<tbody>
-<tr ng-show="score.overallScore > 0" ng-repeat="score in scores">
-<td>{{ score.user }}</td>
-<td>{{ score.overallScore }}</td>
-</tr>
-</tbody>
-</table>
-<button class="btn menu-button-small" ng-click="getNextClient()" ng-show="gotLeaderBoard">Get next client</button>
-<button class="btn menu-button-small" ng-click="quit()" ng-show="gotLeaderBoard">Exit</button>
-</div>
-  </div>
-  </div>
-</div>
-
-
-<div id="ingame-leaderboard" class="text-center">
-  <div class="bg">
-    <div class="col-xs-12">
-      <div>
-        <div class="col-xs-3"></div>
-        <div class="col-xs-6">
-
-          <div id="ingame-leaderboard-content">
-            <p>Congrats, you beat the target!</p>
-            <br/>
-            <p class='blink' ng-show="!gotLeaderBoard">Please wait while we save your earnings. It may take a while.</p>
-            <p ng-show="!submittedScore">(If nothing happens after a couple of minutes, please click <span ng-click="targetReachedGetNext()" style="pointer:cursor; color:rgb(102,167,227)">here</span>.)</p>
-
-
-            <p ng-show="gotLeaderBoard">Your total earnings are now <span class="score">${{overallScore}}</span> and
-              your rank is now <span class="score">{{overallScoreRank||unranked}}</span>.</p>
-            <br/>
-            <table class="table text-center" ng-show="gotLeaderBoard">
-              <thead>
-                <tr>
-                  <th class="text-center">Player</th>
-                  <th class="text-center">Earnings</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr ng-show="score.overallScore > 0" ng-repeat="score in scores">
-                  <td>{{ score.user }}</td>
-                  <td>{{ score.overallScore }}</td>
-                </tr>
-              </tbody>
-            </table>
-            <button class="btn menu-button-small" ng-click="hideLeaderboard()" ng-show="gotLeaderBoard">Continuing improving this group</button>
-            <button class="btn menu-button-small" ng-click="getNextClient()" ng-show="gotLeaderBoard">Get next client</button>
-            <button class="btn menu-button-small" ng-click="quit()" ng-show="gotLeaderBoard">Exit</button>
-          </div>
-        </div>
-
-        <div class="col-xs-3"></div>
-      </div>
+<div style="overflow:auto;max-height:60px;margin:20px;" ng-repeat="aid in bucket.orderedIds">
+  <div class="an-alien alien {{aid}} {{aliens.alienArray[aid].illegal}} {{aliens.alienArray[aid].isHidden}}"
+       ng-click="selectAlien(aid, false)"
+       ng-if="aid[0] != '_'">
+    <div ng-repeat="prop in aliens.alienArray[aid].properties"
+         class="property prop_{{aliens.alienArray[aid].properties[$index]}}">
+	    <img class="img-responsive"
+           style="cursor:pointer;height:60px;"
+           ng-src="{{aliens.alienArray[aid].url[$index]}}"/>
     </div>
-  </div>
-
+	</div>
 </div>
 
-<div id="cant-remove" class="text-center">
-  Sorry, you cannot remove this alien. <br>
-  You must include it in a grouping that beats
-  the target score.
-</div>
-
-<div id="start-over" class="text-center">
-  Are you sure you would like to start over?<br>
-  You will be given a new alien.
-  <br>
-  <button class="btn menu-button-small" ng-click="getNextSeed()">Yes</button>
-  <button class="btn menu-button-small" ng-click="startOverHide();">Cancel</button>
-</div>
-
-<div id="skip-level" class="text-center">
-  Are you sure you would like to skip this galaxy?<br>
-  You will receive match clients from other galaxies instead.
-  <br>
-  <button class="btn menu-button-small" ng-click="getNextGalaxy()">Yes</button>
-  <button class="btn menu-button-small" ng-click="skipLevelHide();">Cancel</button>
-</div>
-
-
-<div id="log-in" class="text-center">
-  You have been logged out. Please sign in <a ui-sref="auth">here</a>.
-</div>
-
-
-
-<span id="feedback">{{feedback}}</span> <span id="small_feedback"></span>
-
-<!-- alien contents -->
-<div id="top-right">
-  <div id="img-container"></div>
-</div>
-
-<div id="bottom-right">
-  <div id="buttons3" ng-show="loaded">
-    <!-- error message -->
-    <!--<p class='colour-error'>You have an empty bucket!</p>-->
-    <button id="redo-button" class="btn" ng-click="redo()" ng-if="!disableRedo">Redo</button>
-    <button id="dummy-redo-button" class="btn" ng-if="disableRedo">Redo</button>
-    <button id="undo-button" class="btn" ng-click="undo()" ng-if="!disableUndo">Undo</button>
-    <button id="dummy-undo-button" class="btn" ng-if="disableUndo">Undo</button>
-    <button id="add-group-button" class="btn" ng-click="startOver()">Skip this client</button>
-    <!--<button id="done-button" class="btn" ng-click="doneBucket()">Calculate Score</button>-->
-    <div class='title-font score3 big'>EARNED: $<span count-to="{{score - initialScore}}" value="{{prev_score - initialScore}}" duration="1" ng-show="doneSeeding"></span></div>
-    <div class='title-font target big'>TARGET: $<span ng-show="doneSeeding">{{highest_score - initialScore + 1}}</span></div>
-    <button id="end-button3" class="btn" ng-click="skipLevel()">Skip this galaxy</button>
-    <button id="end-button" class="btn" ng-click="endGame()">End game</button>
-  </div>
-</div>
-
-<div id="aliens" style='' ng-show="loaded">
-  <div ng-repeat="id in bucket.orderedIds">
-    <div class="an-alien alien {{id}} {{aliens.alienArray[id].illegal}} {{aliens.alienArray[id].similar}} {{aliens.alienArray[id].isHidden}}"
-         ng-click="selectAlien(id, false)"
-         ng-right-click="pickSeed(id)"
-         style="border-style:solid; border-width: 2vw; border-color: {{aliens.alienArray[id].color}};"
-         ng-if="id[0] != '_'">
-
-      <img src="{{aliens.alienArray[id].url}}" imageonload="imageLoadedIncrementCount()"/>
-      <div class="simialrity-bar" ng-show='{{aliens.alienArray[id].similarityBar != -1}}'>
-        <div class="similarity" style="width: {{aliens.alienArray[id].similarityBar}}%;"></div>
-      </div>
-    </div>
-    <div class="empty-alien" ng-if="id[0] == '_'"></div>
-  </div>
-</div>
-
-
-
-<div id='current-aliens'>
-  <div ng-repeat="id in bucket.currentAliens"
-       class="current-alien {{id}}"
-       ng-click="selectAlien(id, false)"
-       ng-right-click="pickSeed(id)"
-       style="border-style:solid; border-width: 1.5vw; border-color: {{aliens.alienArray[id].color}};"
-       ng-show="loaded">
-    <img src="{{aliens.alienArray[id].url}}"/>
-    <div class="simialrity-bar" ng-show='{{aliens.alienArray[id].similarityBar != -1}}'>
-      <div class="similarity" style="width: {{aliens.alienArray[id].similarityBar}}%;"></div>
-    </div>
-  </div>
-</div>
-
-<img class="loading" ng-show="!loaded" src="https://d13yacurqjgara.cloudfront.net/users/12755/screenshots/1037374/hex-loader2.gif"/>
+{{hello}}!
